# myde

./: .gitignore  AGENTS.md  README.en.md  README.md  biome.json  electron-builder.config.js  electron.vite.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json  tsconfig.web.json
.github/workflows/: build.yml
desktop/: package.json  readme.md  vite.config.js
desktop/example/: package-lock.json  package.json  vite.config.js
desktop/offical/: readme.md  tsconfig.json  vite.config.js
desktop/remote/: tsconfig.json  vite.config.ts
desktop/src/: main.ts  win_layout.ts
docs/: PLUGIN_DEVELOPMENT.md  details.md  dev_note.md
docs/think/: pointer.md  自动布局.md
patches/: dkh-ui@0.14.2.patch
remote/: README.md  package.json  vite.config.ts
remote/frontend/: package.json  vite.config.js
remote/src/: index.ts  remote-render.ts  server.ts
script/: gen_protocols.ts
script/check_proto_code/: check.ts
script/linux_input_codes/: gen_linux_input_codes.ts
script/wayland/: gen_protocols.ts
script/xcb/: readme.md
src/: desktop-api.ts
src/connect/: connect.test.ts  connect.ts  readme.md
src/dbus/: client.ts
src/event-emitter/: event-emitter-example.ts  event-emitter.test-d.ts  event-emitter.test.ts  event-emitter.ts
src/input_codes/: types.ts
src/input_map/: web2x.ts
src/main/: main.ts
src/remote_connect/: README.md  loopback_adapter.ts  noise-handshake.d.ts  noise_utils.ts  package.json  peerjs_adapter.ts  sconnect.test.ts  sconnect.ts  tsconfig.json  (+2 more)
test/simple_app/: Cargo.toml
test/simple_app/src/: dmabuf.rs  lib.rs
(+123 files in other folders)
